--- a/MPS_Model_Publishing/solutions/org.campagnelab.circles.plugin/source_gen/org/campagnelab/circles/plugin/plugin/startup.properties
+++ b/MPS_Model_Publishing/solutions/org.campagnelab.circles.plugin/source_gen/org/campagnelab/circles/plugin/plugin/startup.properties
@@ -2,3 +2,4 @@
 # Once re-generated, this file shall get copied to module root
 # (to ensure modules build with build script and bootstrap loading sequence pick the changes up)
 init.application=org.campagnelab.circles.plugin.plugin.Plugin_ApplicationPlugin
+init.project=org.campagnelab.circles.plugin.plugin.Plugin_ProjectPlugin
