--- a/MPS_Model_Publishing/build.xml
+++ b/MPS_Model_Publishing/build.xml
@@ -12,7 +12,7 @@
   <property name="publisher_version" value="1.0" />
   <property name="artifacts.mps" location="${mps_home}" />
   <property name="artifacts.mpsJava" location="${mps_home}" />
-  <property name="artifacts.org.campagnelab.Editor2PDF" location="../../../Editor2PDF/build/artifacts/org.campagnelab.Editor2PDF" />
+  <property name="artifacts.org.campagnelab.Editor2PDF" location="../../../MPS/3.3/Editor2PDF/build/artifacts/org.campagnelab.Editor2PDF" />
   <property file="${artifacts.mps}/build.properties" prefix="import.mps" />
   <property file="${artifacts.org.campagnelab.Editor2PDF}/build.properties" prefix="import.org.campagnelab.Editor2PDF" />
   <property name="mps.build.number" value="${import.mps.mps.build.number}" />
@@ -34,24 +34,27 @@
   <target name="assemble" depends="classes, declare-mps-tasks">
     <mkdir dir="${build.layout}" />
     <mkdir dir="${build.tmp}/default/MPS_Model_Publishing-_dl__lbrace_publisher_version_rbrace_.zip" />
-    <mkdir dir="${build.tmp}/default/MPS_Model_Publishing-_dl__lbrace_publisher_version_rbrace_.zip/MPS_Model_Publishing" />
-    <mkdir dir="${build.tmp}/default/MPS_Model_Publishing-_dl__lbrace_publisher_version_rbrace_.zip/MPS_Model_Publishing/META-INF" />
-    <echoxml file="${build.tmp}/default/MPS_Model_Publishing-_dl__lbrace_publisher_version_rbrace_.zip/MPS_Model_Publishing/META-INF/plugin.xml">
+    <mkdir dir="${build.tmp}/default/MPS_Model_Publishing-_dl__lbrace_publisher_version_rbrace_.zip/MPS_Module_Publishing" />
+    <mkdir dir="${build.tmp}/default/MPS_Model_Publishing-_dl__lbrace_publisher_version_rbrace_.zip/MPS_Module_Publishing/META-INF" />
+    <echoxml file="${build.tmp}/default/MPS_Model_Publishing-_dl__lbrace_publisher_version_rbrace_.zip/MPS_Module_Publishing/META-INF/plugin.xml">
       <idea-plugin version="2" xmlns:xi="http://www.w3.org/2001/XInclude">
-        <id>MPS_Model_Publishing</id>
-        <name>MPS_Model_Publishing</name>
-        <version>1.0</version>
+        <id>org.campagnelab.ModulePublisher</id>
+        <name>org.campagnelab.ModulePublisher</name>
+        <description>An plugin for MPS that allows to publish modules, models and nodes in a mongo DB instance. </description>
+        <version>${mpsBootstrapCore.version}</version>
+        <vendor url="http://campagnelab.org">Campagne Laboratory</vendor>
         <depends>jetbrains.mps.core</depends>
         <depends>org.campagnelab.Editor2PDF</depends>
         <depends>jetbrains.mps.ide.devkit</depends>
+        <idea-version until-build="144.1" since-build="143.1" />
         
         <extensions defaultExtensionNs="com.intellij">
           <mps.LanguageLibrary dir="/languages" />
         </extensions>
       </idea-plugin>
     </echoxml>
-    <mkdir dir="${build.tmp}/default/MPS_Model_Publishing-_dl__lbrace_publisher_version_rbrace_.zip/MPS_Model_Publishing/languages" />
-    <mkdir dir="${build.tmp}/default/MPS_Model_Publishing-_dl__lbrace_publisher_version_rbrace_.zip/MPS_Model_Publishing/languages/MPS_Model_Publishing" />
+    <mkdir dir="${build.tmp}/default/MPS_Model_Publishing-_dl__lbrace_publisher_version_rbrace_.zip/MPS_Module_Publishing/languages" />
+    <mkdir dir="${build.tmp}/default/MPS_Model_Publishing-_dl__lbrace_publisher_version_rbrace_.zip/MPS_Module_Publishing/languages/MPS_Model_Publishing" />
     <mkdir dir="${build.tmp}/default/com.mongodb.driver.jar" />
     <mkdir dir="${build.tmp}/default/com.mongodb.driver.jar/META-INF" />
     <echoxml file="${build.tmp}/default/com.mongodb.driver.jar/META-INF/module.xml">
@@ -63,7 +66,7 @@
         <sources jar="com.mongodb.driver-src.jar" descriptor="com.mongodb.driver.msd" />
       </module>
     </echoxml>
-    <jar destfile="${build.tmp}/default/MPS_Model_Publishing-_dl__lbrace_publisher_version_rbrace_.zip/MPS_Model_Publishing/languages/MPS_Model_Publishing/com.mongodb.driver.jar" duplicate="preserve">
+    <jar destfile="${build.tmp}/default/MPS_Model_Publishing-_dl__lbrace_publisher_version_rbrace_.zip/MPS_Module_Publishing/languages/MPS_Model_Publishing/com.mongodb.driver.jar" duplicate="preserve">
       <fileset dir="${build.tmp}/java/out/com.mongodb.driver" />
       <fileset dir="${basedir}/solutions/com.mongodb.driver" includes="icons/**, resources/**" />
       <fileset dir="${basedir}/solutions/com.mongodb.driver/source_gen" includes="**/trace.info, **/exports" />
@@ -72,7 +75,7 @@
     <copyModels todir="${build.tmp}/customProcessors/copyModels/solutions-com.mongodb.driver-models">
       <fileset dir="${basedir}/solutions/com.mongodb.driver/models" includes="**/*.mps, **/*.metadata, **/*.history, **/*.mpsr, **/.model" />
     </copyModels>
-    <jar destfile="${build.tmp}/default/MPS_Model_Publishing-_dl__lbrace_publisher_version_rbrace_.zip/MPS_Model_Publishing/languages/MPS_Model_Publishing/com.mongodb.driver-src.jar" duplicate="preserve">
+    <jar destfile="${build.tmp}/default/MPS_Model_Publishing-_dl__lbrace_publisher_version_rbrace_.zip/MPS_Module_Publishing/languages/MPS_Model_Publishing/com.mongodb.driver-src.jar" duplicate="preserve">
       <fileset dir="${basedir}/solutions/com.mongodb.driver/source_gen">
         <exclude name="**/trace.info" />
         <exclude name="**/exports" />
@@ -103,7 +106,7 @@
         <sources jar="org.campagnelab.circles.plugin-src.jar" descriptor="org.campagnelab.circles.plugin.msd" />
       </module>
     </echoxml>
-    <jar destfile="${build.tmp}/default/MPS_Model_Publishing-_dl__lbrace_publisher_version_rbrace_.zip/MPS_Model_Publishing/languages/MPS_Model_Publishing/org.campagnelab.circles.plugin.jar" duplicate="preserve">
+    <jar destfile="${build.tmp}/default/MPS_Model_Publishing-_dl__lbrace_publisher_version_rbrace_.zip/MPS_Module_Publishing/languages/MPS_Model_Publishing/org.campagnelab.circles.plugin.jar" duplicate="preserve">
       <fileset dir="${build.tmp}/java/out/org.campagnelab.circles.plugin" />
       <fileset dir="${basedir}/solutions/org.campagnelab.circles.plugin" includes="icons/**, resources/**" />
       <fileset dir="${basedir}/solutions/org.campagnelab.circles.plugin/source_gen" includes="**/trace.info, **/exports" />
@@ -112,7 +115,7 @@
     <copyModels todir="${build.tmp}/customProcessors/copyModels/solutions-org.campagnelab.circles.plugin-models">
       <fileset dir="${basedir}/solutions/org.campagnelab.circles.plugin/models" includes="**/*.mps, **/*.metadata, **/*.history, **/*.mpsr, **/.model" />
     </copyModels>
-    <jar destfile="${build.tmp}/default/MPS_Model_Publishing-_dl__lbrace_publisher_version_rbrace_.zip/MPS_Model_Publishing/languages/MPS_Model_Publishing/org.campagnelab.circles.plugin-src.jar" duplicate="preserve">
+    <jar destfile="${build.tmp}/default/MPS_Model_Publishing-_dl__lbrace_publisher_version_rbrace_.zip/MPS_Module_Publishing/languages/MPS_Model_Publishing/org.campagnelab.circles.plugin-src.jar" duplicate="preserve">
       <fileset dir="${basedir}/solutions/org.campagnelab.circles.plugin/source_gen">
         <exclude name="**/trace.info" />
         <exclude name="**/exports" />
@@ -121,14 +124,14 @@
       <zipfileset dir="${build.tmp}/customProcessors/copyModels/solutions-org.campagnelab.circles.plugin-models" prefix="module/models" />
     </jar>
     <zip destfile="${build.layout}/MPS_Model_Publishing-${publisher_version}.zip">
-      <zipfileset file="${basedir}/solutions/com.mongodb.driver/mongo-java-driver-3.2.0.jar" prefix="MPS_Model_Publishing" />
+      <zipfileset file="${basedir}/solutions/com.mongodb.driver/mongo-java-driver-3.2.0.jar" prefix="MPS_Module_Publishing" />
       <fileset dir="${build.tmp}/default/MPS_Model_Publishing-_dl__lbrace_publisher_version_rbrace_.zip" />
     </zip>
     <echo file="${build.layout}/build.properties">MPS_Model_Publishing.publisher_version=${publisher_version}${line.separator}mps.build.number=${mps.build.number}${line.separator}mps.date=${mps.date}${line.separator}mps.build.vcs.number=${mps.build.vcs.number}${line.separator}mps.teamcity.buildConfName=${mps.teamcity.buildConfName}${line.separator}mps.idea.platform.build.number=${mps.idea.platform.build.number}${line.separator}mpsBootstrapCore.version=${mpsBootstrapCore.version}${line.separator}org.campagnelab.Editor2PDF.version=${org.campagnelab.Editor2PDF.version}</echo>
   </target>
   
   <target name="buildDependents">
-    <ant antfile="../../../Editor2PDF/Editor2PDF.xml" inheritAll="false" useNativeBasedir="true" />
+    <ant antfile="../../../MPS/3.3/Editor2PDF/Editor2PDF.xml" inheritAll="false" useNativeBasedir="true" />
   </target>
   
   <target name="fetchDependencies">
@@ -254,7 +257,7 @@
   </target>
   
   <target name="makeDependents">
-    <ant antfile="../../../Editor2PDF/Editor2PDF.xml" inheritAll="false" useNativeBasedir="true">
+    <ant antfile="../../../MPS/3.3/Editor2PDF/Editor2PDF.xml" inheritAll="false" useNativeBasedir="true">
       <target name="generate" />
       <target name="assemble" />
     </ant>
@@ -263,7 +266,7 @@
   <target name="java.compile.com.mongodb.driver">
     <mkdir dir="${basedir}/solutions/com.mongodb.driver/source_gen" />
     <mkdir dir="${build.tmp}/java/out/com.mongodb.driver" />
-    <javac destdir="${build.tmp}/java/out/com.mongodb.driver" fork="true" includeantruntime="false">
+    <javac destdir="${build.tmp}/java/out/com.mongodb.driver" fork="true" encoding="utf8" includeantruntime="false">
       <compilerarg value="-Xlint:none" />
       <src>
         <path location="${basedir}/solutions/com.mongodb.driver/source_gen" />
@@ -277,7 +280,7 @@
   <target name="java.compile.org.campagnelab.circles.plugin" depends="java.compile.com.mongodb.driver, fetchDependencies">
     <mkdir dir="${basedir}/solutions/org.campagnelab.circles.plugin/source_gen" />
     <mkdir dir="${build.tmp}/java/out/org.campagnelab.circles.plugin" />
-    <javac destdir="${build.tmp}/java/out/org.campagnelab.circles.plugin" fork="true" includeantruntime="false">
+    <javac destdir="${build.tmp}/java/out/org.campagnelab.circles.plugin" fork="true" encoding="utf8" includeantruntime="false">
       <compilerarg value="-Xlint:none" />
       <src>
         <path location="${basedir}/solutions/org.campagnelab.circles.plugin/source_gen" />
